<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/registrationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/registration"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>


    <EditText
        android:id="@+id/userEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="@dimen/default_margin_side"
        android:layout_marginRight="@dimen/default_margin_side"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:layout_below="@id/registrationTextView"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="@dimen/default_margin_side"
        android:layout_marginRight="@dimen/default_margin_side"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@id/userEmailEditText"/>

    <EditText
        android:id="@+id/passwordAgainEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="@dimen/default_margin_side"
        android:layout_marginRight="@dimen/default_margin_side"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password_again"
        android:inputType="textPassword"
        android:layout_below="@id/passwordEditText"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/passwordAgainEditText"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#0E9588"
            android:text="@string/registration"
            android:onClick="register"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:backgroundTint="#0E9588"
            android:text="@string/cancel"
            android:onClick="cancel"/>
    </LinearLayout>
</RelativeLayout>
