<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/email_address"
        android:gravity="center"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.214"
        tools:layout_editor_absoluteX="29dp" />
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:hint="@string/password"
        android:gravity="center"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/userEmailEditText"/>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="#0E9588"
        android:hint="@string/login"
        android:onClick="login"
        android:textColorHint="@color/white"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        tools:layout_editor_absoluteX="-31dp" />

    <Button
        android:id="@+id/registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="#0E9588"
        android:hint="@string/registration"
        android:textColorHint="@color/white"
        android:onClick="registration"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        tools:layout_editor_absoluteX="-31dp" />

    <Button
        android:id="@+id/loginAsGuest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="#0E9588"
        android:hint="@string/loginAsGuest"
        android:onClick="loginAsGuest"
        android:textColorHint="@color/white"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration"
        tools:layout_editor_absoluteX="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
